fix jumping pagination

--- a/src/app/dashboard/item-list/item-list.component.scss
+++ b/src/app/dashboard/item-list/item-list.component.scss
@@ -2,10 +2,6 @@ mat-paginator{
   background: #fafafa;
 }
 
-.movieList{
-  min-height:80vh;
-}
-
 
 mat-icon{
   position: relative;
